--- a/js-practice.html
+++ b/js-practice.html
@@ -22,6 +22,18 @@ console.log(y);
 let z = x * y;
 console.log(z);
 
+console.log("Working with strings")
+let firstName = 'Christian';
+let middleName = 'Clay';
+let lastName = 'McDonald';
+
+let name = firstName + " " + middleName + " " + lastName;
+console.log(name);
+
+//Strings on my own
+
+let greeting = 'My name is ' + firstName + " " + middleName + " " + lastName;
+console.log(greeting);
 
   </script>
 </body>
