new fuction names

--- a/js-practice.html
+++ b/js-practice.html
@@ -53,8 +53,8 @@ function makeName(firstName, middleName, lastName) {
   return fullName
 }
 
-const name1 = makeName("Joan", "Kevin", "Kaitlyn");
-const name2 = makeName("Chris", "Jo", "Margine");
+const name1 = makeName("Joan", "Margine", "Robenson");
+const name2 = makeName("Chris", "Jo", "Cox");
 const name3 = makeName("Robert", "\"Beto\"", "O'Rourke");
 
 console.log(name1);
