--- a/js-practice.html
+++ b/js-practice.html
@@ -53,7 +53,7 @@ function makeName(firstName, middleName, lastName) {
   return fullName
 }
 
-const name1 = makeName("Joan", "Margine", "Robenson");
+const name1 = makeName("Kelly", "Margine", "Robenson");
 const name2 = makeName("Chris", "Jo", "Cox");
 const name3 = makeName("Robert", "\"Beto\"", "O'Rourke");
 
@@ -61,7 +61,37 @@ console.log(name1);
 console.log(name2);
 console.log(name3);
 
+console.log("testing " + middleName.length)
 
+// Just a log to show in our Console
+console.log("Making a better name function:");
+
+// A better name function to fix middle initials
+function makeBetterName(firstName, middleName, lastName) {
+  if (middleName.length === 1) {
+    middleName = middleName + ".";
+  }
+  let fullName = firstName + " " + middleName + " " + lastName;
+  return fullName;
+}
+
+console.log(makeBetterName("Joan", "Marie", "Larkin"));
+console.log(makeBetterName("John", "F", "Kennedy"));
+
+console.log("scoreCompare function");
+  function scoreCompare(home, away) {
+    if (home > away) {
+      return "Home team wins!";
+    } else if (away > home) {
+      return "Away team wins :(";
+    } else {
+      return "It was a tie";
+    }
+  }
+
+  console.log(scoreCompare(5,3));
+  console.log(scoreCompare(3,5));
+  console.log(scoreCompare(4,4));
 
   </script>
 </body>
